// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary correctly for 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    4
     
    expenses
     with amount 
    $54.56
  </p>
</div>
`;

exports[`should render expenses summary correctly fro 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     with amount 
    $0.05
  </p>
</div>
`;
